backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crudapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crudapp
  template:
    metadata:
      labels:
        app: crudapp
    spec:
      containers:
      - name: crudapp
        image: index.docker.io/vishnurapps/dicombackend:14.0
        ports:
        ports:
        - containerPort: 8443


---

apiVersion: v1
kind: Service
metadata:
  name: crudapp-svc
  labels:
    app: crudapp
spec:
  ports:
  - port: 8443
    
  selector:
    app: crudapp
